--- a/index.html
+++ b/index.html
@@ -1376,7 +1376,7 @@ footer::before {
       <div class="container hero-container">
         <div class="hero-content">
           <div class="hero-subtitle">Available for freelance work</div>
-          <h1>UI/Ux Creative Developer & Interface Designer</h1>
+          <h1>UI/UX Creative Developer & Interface Designer</h1>
           <p class="hero-description">
             I craft digital experiences that merge technology, music, and art
             into functional beauty.
